--- a/engine/.vscode/settings.json
+++ b/engine/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "editor.bracketPairColorization.enabled": true,
     "workbench.colorCustomizations": {
-        "editorBracketHighlight.foreground1": "#ff4747",
-        "editorBracketHighlight.foreground2": "#ff4747",
-        "editorBracketHighlight.foreground3": "#ff4747",
-        "editorBracketHighlight.foreground4": "#ff4747",
-        "editorBracketHighlight.foreground5": "#ff4747",
-        "editorBracketHighlight.foreground6": "#ff4747",
-        "editorBracketHighlight.unexpectedBracket.foreground": "#db6165"
+        "editorBracketHighlight.foreground1": "#0084ff",
+        "editorBracketHighlight.foreground2": "#0084ff",
+        "editorBracketHighlight.foreground3": "#0084ff",
+        "editorBracketHighlight.foreground4": "#0084ff",
+        "editorBracketHighlight.foreground5": "#0084ff",
+        "editorBracketHighlight.foreground6": "#0084ff",
+        "editorBracketHighlight.unexpectedBracket.foreground": "#0084ff"
     },
     "editor.rulers": [80],
     "editor.fontLigatures": true,
@@ -24,7 +24,7 @@
                     "punctuation.definition.comment.nim"
                 ],
                 "settings": {
-                    "foreground": "#19a67c",
+                    "foreground": "#31dba8",
                      "fontStyle": "italic"
                 }
             },
@@ -33,8 +33,8 @@
                     "comment.line.number-sign.doc-comment.nim"
                 ],
                 "settings": {
-                    "foreground": "#19784b",
-                     "fontStyle": "italic underline"
+                    "foreground": "#31dba8",
+                     "fontStyle": "italic bold"
                 }
             },
 
@@ -103,7 +103,7 @@
                     "storage.type.generic.nim"
                 ],
                 "settings": {
-                    "foreground": "#ff4747",
+                    "foreground": "#0084ff",
                     "fontStyle": "bold"
                 }
             },                    
@@ -117,7 +117,7 @@
                     "support.type",
                 ],
                 "settings": {
-                    "foreground": "#ff4747" // Adjust this color to fit your theme
+                    "foreground": "#0084ff" // Adjust this color to fit your theme
                 }
             },
             {
@@ -125,7 +125,7 @@
                     "support.type",
                 ],
                 "settings": {
-                    "foreground": "#ffa4a4" // Adjust this color to fit your theme
+                    "foreground": "#0088ff" // Adjust this color to fit your theme
                 }
             },
             {
@@ -135,7 +135,7 @@
                     "keyword.type.float"
                 ],
                 "settings": {
-                    "foreground": "#ffdd00", // Adjust color to your preference
+                    "foreground": "#42a7ff", // Adjust color to your preference
                     "fontStyle": "italic" // Optional: apply italic if desired
                 }
             },
